# clip

./: .gitignore  AST.hs  CodeGen.hs  Lexer.x  Main.hs  Makefile  Optimize.hs  Parser.y  PythonGrammar.txt  PythonIndention.hs  README.md  Token.hs  UnitTests.hs  clip.cabal
tests/: test0.py  test1.py  test2.py  test3.py  test4.py
