-- See http://haskell.org/cabal/users-guide/

name:                clip
version:             0.1.0.0
synopsis:            A Python compiler that outputs Common Lisp code.
-- description:         
homepage:            http://harold.hotelling.net/clip
license:             Apache-2.0
license-file:        LICENSE
author:              Harold H. Lee
maintainer:          harold@hotelling.net
copyright:           Copyright 2014 Harold H. Lee
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable clip
  main-is:             Main.hs
  other-modules:       Lexer, Parser
  build-depends:       base ==4.14.*, array ==0.5.*, HUnit ==1.6.*
  build-tools:         alex, happy
